# DuFF

./: .gitignore  Cargo.toml  README.md  duff_args.yml  dupe_args.yml
misc/bufreader_benchmarking/: DuFF_BufReader_Analytics.ipynb  std_io_bufreader_perf_data.xlsx
src/: config.rs  duff_args.yml  file_result.rs  main.rs  util.rs
tests/: cli.rs
