[package]
name = "DuFF"
version = "0.5.0"
authors = ["Mike Lape <MikeLape@Gmail.com>"]
description = "DuFF [Duplicate File Finder]\nAn application to find duplicate files on a filesystem. \n [Report bugs at https://github.com/bioinformike/DuFF/issues]"
repository = "https://github.com/bioinformike/DuFF"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2", features = ["yaml", "wrap_help"] }

walkdir = "2"
crossbeam  = "*"
ignore = "*"
ring = "*"
chrono = "*"
textwrap = "*"
pretty-bytes = "0.2.2"