[package]
name = "duff"
version = "0.7.0"
authors = ["Mike Lape <MikeLape@Gmail.com>"]
description = "DuFF [Duplicate File Finder]\nAn application to find duplicate files on a filesystem. \n [Report bugs at https://github.com/bioinformike/DuFF/issues]"
repository = "https://github.com/bioinformike/DuFF"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Parallelism
rayon = "^1"
crossbeam-utils = "^0"
crossbeam-deque = "^0"
crossbeam-channel = "^0"

# Miscellaneous
clap = { version = "^2", features = ["yaml", "wrap_help"] }
chrono = {version = "^0", features = ['serde'] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
shh = "^1"

# I/O and Progress
indicatif = {version = "^0", features = ["rayon"]}
console = "^0"
textwrap = "0.11.0"
pretty-bytes = "^0"
byte-unit = "^4"

# Hashing
twox-hash= "^1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
ntest ="*"
glob = "*"